Fix Font -> need to fix image for ios

--- a/app.json
+++ b/app.json
@@ -13,7 +13,8 @@
       "backgroundColor": "#5CC71A"
     },
     "assetBundlePatterns": [
-      "**/*"
+      "**/*",
+      "./assets/images/public/*"
     ],
     "ios": {
       "supportsTablet": true
