--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
-    "expo-constants": "~14.4.2"
+    "expo-constants": "~14.4.2",
+    "expo-image": "~1.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
