--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
     "react": "18.2.0",
+    "react-animated-heart": "^0.0.8",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-elements": "^3.4.3",
