--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~49.0.15",
+    "expo-camera": "~13.4.4",
     "expo-constants": "~14.4.2",
     "expo-font": "~11.4.0",
     "expo-image": "~1.3.5",
+    "expo-image-picker": "~14.3.2",
     "expo-linking": "~5.0.2",
+    "expo-media-library": "~15.4.1",
+    "expo-permissions": "^14.4.0",
     "expo-router": "^2.0.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
