--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll"
   },
@@ -13,40 +13,41 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
+    "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
-    "expo": "~49.0.15",
-    "expo-camera": "~13.4.4",
-    "expo-constants": "~14.4.2",
-    "expo-font": "~11.4.0",
-    "expo-image": "~1.3.5",
-    "expo-image-picker": "~14.3.2",
-    "expo-linking": "~5.0.2",
-    "expo-media-library": "~15.4.1",
+    "expo": "~50.0.6",
+    "expo-camera": "~14.0.4",
+    "expo-constants": "~15.4.5",
+    "expo-font": "~11.10.2",
+    "expo-image": "~1.10.6",
+    "expo-image-picker": "~14.7.1",
+    "expo-linking": "~6.2.2",
+    "expo-media-library": "~15.9.1",
     "expo-permissions": "^14.4.0",
-    "expo-router": "^2.0.0",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
-    "expo-system-ui": "~2.4.0",
-    "expo-web-browser": "~12.3.2",
+    "expo-router": "~3.4.7",
+    "expo-splash-screen": "~0.26.4",
+    "expo-status-bar": "~1.11.1",
+    "expo-system-ui": "~2.9.3",
+    "expo-web-browser": "~12.8.2",
     "react": "18.2.0",
     "react-animated-heart": "^0.0.8",
     "react-dom": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.73.4",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "react-native-maps": "1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "jest": "^29.2.1",
-    "jest-expo": "~49.0.0",
+    "jest-expo": "~50.0.2",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   },
