Add some component. ToDo the rest.

--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
-    "react-native-maps": "1.10.0"
+    "react-native-maps": "1.10.0",
+    "@react-native-community/datetimepicker": "7.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
