--- a/app.json
+++ b/app.json
@@ -54,6 +54,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "dc1bfdf5-8f35-417b-bc54-557846dfb768"
+      }
     }
   }
 }
