--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,23 +8,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Find yarn cache location
-        id: yarn-cache
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-
-      - name: JS package cache
-        uses: actions/cache@v1
-        with:
-          path: $(( steps.yarn-cache.outputs.dir ))
-          key: $(( runner.os ))-yarn-$(( hashFiles('**/yarn.lock') ))
-          restore-keys: |
-            $(( runner.os ))-yarn-
-
       - name: Install Node Modules
-        run: yarn install
-
-      - name: Run Lint
-        run: yarn lint
+        run: npm install
 
       - name: Run tests
-        run: yarn test
+        run: npm run ci
