--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/datetimepicker": "7.6.1",
     "@react-navigation/native": "^6.0.2",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
-    "expo": "^50.0.7",
-    "expo-camera": "~14.0.4",
+    "axios": "^1.6.7",
+    "expo": "~50.0.7",
+    "expo-camera": "~14.0.5",
     "expo-constants": "~15.4.5",
     "expo-font": "~11.10.2",
     "expo-image": "~1.10.6",
