--- a/app.json
+++ b/app.json
@@ -50,7 +50,8 @@
           "photosPermission": "Allow $LeafyLinks to access your photos.",
           "savePhotosPermission": "Allow $LeafyLinks to save photos."
         }
-      ]
+      ],
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true
