--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 EXPO_PUBLIC_API_URL=https://leafylinks.maxim-le-cookie.fr/api/
 EXPO_PUBLIC_API_KEY=1|SmhHqGGbaLYoP2Js2xpeoP5wj2Zp7FlWutFUjSNx83a4a112
-EXPO_PUBLIC_API_TREFLE_URL=https://trefle.io/api/v1/plants?token=-MzkPLMWtg_qzBIkk63Prcy5eiAkJ0aGf4otU9g1AKY
+EXPO_PUBLIC_API_TREFLE_URL='https://trefle.io/api/v1/plants?token=-MzkPLMWtg_qzBIkk63Prcy5eiAkJ0aGf4otU9g1AKY'
