--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,4 +33,4 @@ jobs:
         run: npm install
 
       - name: 🚀 Build app
-        run: eas build --non-interactive
+        run: eas build --platform all --non-interactive --no-wait
