--- a/eas.json
+++ b/eas.json
@@ -10,7 +10,14 @@
             },
             "credentialsSource": "remote"
         },
-        "production": {}
+        "production": {
+            "android": {
+                "image": "latest"
+            },
+            "ios": {
+                "image": "latest"
+            }
+        }
     },
     "submit": {
         "production": {}
