--- a/eas.json
+++ b/eas.json
@@ -21,6 +21,17 @@
                 "image": "latest"
             }
         }
+        "test": {
+            "env":{
+                "EXPO_PUBLIC_API_URL": "https://leafylinks.maxim-le-cookie.fr/api/"
+            }
+            "android": {
+                "image": "latest"
+            },
+            "ios": {
+                "image": "latest"
+            }
+        }
     },
     "submit": {
         "production": {}
