--- a/package.json
+++ b/package.json
@@ -17,20 +17,25 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-community/netinfo": "11.1.0",
     "@react-navigation/native": "^6.0.2",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
+    "@stream-io/flat-list-mvcp": "^0.10.3",
     "axios": "^1.6.7",
     "expo": "~50.0.7",
     "expo-camera": "~14.0.5",
     "expo-constants": "~15.4.5",
+    "expo-file-system": "~16.0.9",
     "expo-font": "~11.10.2",
     "expo-image": "~1.10.6",
+    "expo-image-manipulator": "~11.8.0",
     "expo-image-picker": "~14.7.1",
     "expo-linking": "~6.2.2",
-    "expo-media-library": "~15.9.1",
+    "expo-media-library": "~15.9.2",
     "expo-permissions": "^14.4.0",
     "expo-router": "~3.4.7",
+    "expo-secure-store": "~12.8.1",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
@@ -42,11 +47,13 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-maps": "1.10.0",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
-    "expo-secure-store": "~12.8.1"
+    "stream-chat-expo": "^5.30.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
