--- a/app.json
+++ b/app.json
@@ -51,7 +51,8 @@
           "savePhotosPermission": "Allow $LeafyLinks to save photos."
         }
       ],
-      "expo-secure-store"
+      "expo-secure-store",
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
