Fix and change component userinfo

--- a/app.json
+++ b/app.json
@@ -65,6 +65,12 @@
         "projectId": "dc1bfdf5-8f35-417b-bc54-557846dfb768"
       }
     },
-    "owner": "leafylinks"
+    "owner": "leafylinks",
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/dc1bfdf5-8f35-417b-bc54-557846dfb768"
+    }
   }
 }
